react-express-mongodb/k8s/deployment.fe.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-frontend
spec:
  selector:
    matchLabels:
      app: deployment-frontend
  template:
    metadata:
      labels:
        app: deployment-frontend
    spec:
      containers:
      - name: deployment-frontend
        image: saitbutun/frontend:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"             
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: deployment-frontend
spec:
  selector:
    app: deployment-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort  # NodePort kullanarak dışa açıyoruz

---
