react-express-mongodb/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-express-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    alb.ingress.kubernetes.io/scheme: internet-facing  # Load Balancer dış dünyaya açık
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=120
spec:
  ingressClassName: "nginx"
  rules:
  - host: a4d01992551014adb89fcd67c81c45b9-5cc3f2c9baf5543d.elb.us-east-2.amazonaws.com # eks clusterımda iken bu şekilde çalışıyordu ancak lokalde çalıştırmak için yerine localhost yazın.
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deployment-frontend
            port:
              number: 80
